# classification-poverty-prediction

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Dockerfile.mlflow  README.md  demo.ipynb  docker-compose.yaml  main.py  pyproject.toml
deploy/airflow/config/: airflow.cfg
deploy/airflow/dags/: ml_pipeline_dag.py
docs/: dataset.md
eda/: eda.ipynb
src/: .secrets.baseline  data_download.py  data_extraction.py  data_preprocessing.py  evaluation.py  feature_engineering.py  training.py
