[project]
name = "classification-poverty-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost",
    "lightgbm"
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = "^(artifacts|reports|data)/"

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
extend-select = ["I"]
extend-ignore = ["E203","E501"]
exclude = ["artifacts","reports","data"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = "(artifacts|reports|data)/"

[tool.bandit]
skips = ["B101"]

[project.optional-dependencies]
dev = [
  "pre-commit",
  "black",
  "ruff",
  "mypy",
  "bandit",
  "codespell",
  "detect-secrets",
  "nbstripout",
  "nbqa",
]
